--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 WORKDIR /app
+EXPOSE 5000
 
 COPY *.csproj ./
 RUN dotnet restore
@@ -11,5 +12,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build-env /app/out .
-RUN ls -al
-ENTRYPOINT [ "dotnet", "API.dll", "--urls", "http://*:5000" ]
+ENTRYPOINT [ "dotnet", "API.dll", "--urls", "http://*:5000"]
